# pyNumericalAnalysisToolKit

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: example1.py
src/: analysor.py
tests/: analysor_test.py
