[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "numericalAnalysisTool"
description = "Numerical anlysis tool"
readme = "README.rst"
requires-python = "3.10"
dependencies = [
    "pandas",
    "numpy",
    "seaborn"
]
dynamic = ["version"]
